--- a/config/database.yml
+++ b/config/database.yml
@@ -24,5 +24,5 @@ test:
 production:
   <<: *default
   database: tomi_meisei_production
-  username: tomi_meisei
+  username: tomi_meisei_production_user
   password: <%= ENV["TOMI_MEISEI_DATABASE_PASSWORD"] %>
