dockerの時みたくdatabase.yml書いたよ

--- a/config/database.yml
+++ b/config/database.yml
@@ -24,4 +24,5 @@ test:
 production:
   <<: *default
   database: tomi_meisei_production
-  
+  username: tomi_meisei
+  password: <%= ENV["TOMI_MEISEI_DATABASE_PASSWORD"] %>
