--- a/render.yaml
+++ b/render.yaml
@@ -11,11 +11,11 @@ services:
     region: singapore
     plan: free
     buildCommand: "./bin/render-build.sh"
-    startCommand: "./bin/rails server"
+    startCommand: "bundle exec rails server"
     envVars:
-      - key: <%= ENV['DATABASE_URL'] %>
+      - key: DATABASE_URL
         fromDatabase:
           name: tomi_meisei_production
           property: connectionString
-      - key: <%= ENV['RAILS_MASTER_KEY'] %>
+      - key: RAILS_MASTER_KEY
         sync: false
